--- a/prepros-6.config
+++ b/prepros-6.config
@@ -30,6 +30,7 @@
         "sass/layout/_nav.sass",
         "sass/layout/_header.sass",
         "sass/layout/_hero.sass",
+        "sass/layout/_home-sales-points.sass",
         "sass/components/_buttons.sass"
       ]
     }
